Kubernetes/manifests/project/Code/blog-app-old/pythonapp/k8s/app-1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-1-pvc
      containers:
      - name: app-1
        image: sujeetkp/pythonapp:1.0
        resources:
          limits:
            memory: "500M"
            cpu: "1"
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: app-data
            mountPath: /app/flaskblog/static
            subPath: appdata
