Kubernetes/manifests/project/Code/blog-app-old/pythonapp/k8s/app-2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - app-1
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: htmlapp
        image: sujeetkp/htmlapp:1.0
        resources:
          limits:
            memory: "256M"
            cpu: "0.5"
        ports:
        - containerPort: 80
