Kubernetes/manifests/project/Code/blog-app-old/pythonapp/k8s/app-2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-2-endpoint
spec:
  type: ClusterIP
  selector:
    app: app-2
  ports:
  - port: 5001
    targetPort: 80
