Kubernetes/manifests/project/Code/blog-app-old/pythonapp/k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
